--- a/index.html
+++ b/index.html
@@ -6,27 +6,40 @@
 
 <body>
 <h1>LL初始成员</h1>
+  <h2>位于静冈县沼津市海边小镇·内浦的私立浦之星女学院。<br/>
+
+在骏河湾一角的这所小小高中，<br/>
+
+以二年级高海千歌为中心的9名少女，怀抱着远大的梦想挺身而出。<br/>
+
+那就是，成为闪闪发亮的“学园偶像”！<br/>
+
+不放弃的话，一定能实现梦想——。<br/>
+
+现在只需朝着闪耀的目标，拼命地向前奔跑吧！<br/>
+
+她们的“大家实现的故事”（School Idol Project）由此开始了！</h2>
 
 <p>高坂穗乃果</p>
-</br>
+<br/>
 <p>
 <img src="http://p7.qhmsg.com/dr/220__/t0194f3016c13802983.jpg" />
 </p>
-</br>
+<br/>
 
 <p>田园海未</p>
-</br>
+<br/>
 <p>
 <img src="http://p4.qhmsg.com/dr/220__/t01e5bd39ad7e0aa43a.jpg" />
 </p>  
-</br>
+<br/>
 
 <p>南小鸟</p>
-</br>
+<br/>
 <p>
 <img src="http://p0.qhmsg.com/dr/220__/t012e611619a6b7c751.jpg" />
 </p>
-</br>
+<br/>
 
 </body>
 
