--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
 
 她们的“大家实现的故事”（School Idol Project）由此开始了！</h2>
 
-<p>高坂穗乃果</p>
+<big>高坂穗乃果</big>
 <br/>
 <p>
 <img src="http://p7.qhmsg.com/dr/220__/t0194f3016c13802983.jpg" />
 </p>
 <br/>
 
-<p>田园海未</p>
+<big>田园海未</big>
 <br/>
 <p>
 <img src="http://p4.qhmsg.com/dr/220__/t01e5bd39ad7e0aa43a.jpg" />
 </p>  
 <br/>
 
-<p>南小鸟</p>
+<big>南小鸟</big>
 <br/>
 <p>
 <img src="http://p0.qhmsg.com/dr/220__/t012e611619a6b7c751.jpg" />
